--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@
 node_modules
 package-lock.json
 
+# Electron ignore
+EditorV2-win32-ia32
+EditorV2-win32-x64
+
 # Win Test script
 build.bat
 run.bat
