--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "electron": "^1.8.2",
     "electron-debug": "^1.5.0",
     "jquery": "^3.3.1",
+    "sync-node": "^1.3.1",
     "system-sleep": "^1.3.6",
     "three.js": "^0.77.1",
     "watchjs": "0.0.0"
