--- a/package.json
+++ b/package.json
@@ -2,16 +2,22 @@
   "name": "veditor",
   "version": "1.0.0",
   "description": "Editor for VEngine",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
     "start": "./node_modules/.bin/electron ."
   },
   "author": "wiktortr",
-  "license": "GNU",
+  "license": "SEE LICENSE IN LICENSE",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VOrganization/VEditor.git"
+  },
   "dependencies": {
-    "crypto": "^1.0.1",
-    "electron": "^1.8.2",
     "jquery": "^3.3.1",
     "watchjs": "0.0.0"
+  },
+  "devDependencies": {
+    "electron": "^1.8.2",
+    "electron-packager": "^12.1.0"
   }
 }
