--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Editor for VEngine",
   "main": "app.js",
   "scripts": {
-    "start": "./node_modules/.bin/electron .",
-    "build": "node build.js",
-    "build all": "node build.js all"
+    "start": "./node_modules/.bin/electron ."
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/VOrganization/VEditor.git"
   },
   "author": "wiktortr",
-  "license": "GNU",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/VOrganization/VEditor/issues"
+  },
+  "homepage": "https://github.com/VOrganization/VEditor#readme",
   "dependencies": {
-    "crypto": "^1.0.1",
     "electron": "^1.8.2",
     "jquery": "^3.3.1",
     "watchjs": "0.0.0"
