--- a/package.json
+++ b/package.json
@@ -18,11 +18,18 @@
   "homepage": "https://github.com/VOrganization/VEditor#readme",
   "dependencies": {
     "electron": "^1.8.2",
+    "golden-layout": "^1.5.9",
     "jquery": "^3.3.1",
     "postprocessing": "^4.6.0",
     "three": "^0.93.0",
+    "three-collada-loader-2": "^1.0.1",
     "three-dragcontrols": "^0.88.2",
+    "three-fbx-loader": "^1.0.3",
+    "three-gltf-loader": "^1.93.0",
+    "three-gltf2-loader": "^1.2.0",
+    "three-obj-loader": "^1.1.3",
     "three-orbit-controls": "^82.1.0",
+    "three-stl-loader": "^1.0.6",
     "three-transformcontrols": "^0.78.1",
     "watchjs": "0.0.0"
   }
