--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "golden-layout": "^1.5.9",
     "jquery": "^3.3.1",
     "postprocessing": "^4.6.0",
+    "smart-buffer": "^4.0.1",
     "three": "^0.93.0",
     "three-collada-loader-2": "^1.0.1",
     "three-dragcontrols": "^0.88.2",
